tests/urmoac/errors/maxtt_string_parameter/errors.urmoac
Error: The parameter for option 'max-tt' must be of double type.
